--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My First Page</title>
+<title>Web Tech</title>
 </head>
 <body>
-    <h1>Hello Hasnain!</h1>
-    <p>this is my HTML page .</p>
+
+<!-- This is my first HTML page for Lab 01 -->
+
+<h1>Welcome to 224 Web Technologies Course</h1>
+
 </body>
 </html>
